libs/bng/test/negative/N0601_compartments_in_out_in_seed_species.bngl
# FAIL
# OUTPUT: error: It is not allowed to use compartment @IN in the seed species section.

begin seed species
	 V1@IN  100
	 S@OUT  100
end seed species
